--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ function tb5_randomizetitle(){
 tb5_randomizetitle();
  
 </script>
-</br><center><a href="https://wa.me/+6285156581890"><img src="data+"alt="Loveku" width="30% atau xpx" height="40% atau ypx"/></a> 
+</br><center><a href="https://wa.me/+6285156581890"><img src="https://doc-0s-9s-docs.googleusercontent.com/docs/securesc/868ujoceslg25sdgpl5e2ml7iqvgkiuh/73ulsnq41em7tgqnuts6som566n58s5p/1638422400000/07366358176990562964/07366358176990562964/1_NRv-I7FKisqUVS7hz478sZPvRiQkpBM?e=download&authuser=0&nonce=4dllq7t43nfe2&user=07366358176990562964&hash=20fvfbfinnjkp5po8gglc7fk1dta2go8"alt="Loveku" width="30% atau xpx" height="40% atau ypx"/></a> 
 </head>
 <body BGCOLOR="black">
 <center><center>
