--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@ function tb5_makeArray(n){
  
 tb5_messages = new tb5_makeArray(7);
 tb5_messages[0] = "Haii kristina";
-tb5_messages[1] = "Aku Mau Kamu Tau";
-tb5_messages[2] = "Aku Sayang Sama Kamu";
-tb5_messages[3] = "Aku Serius Ade";
+tb5_messages[1] = "Abang Mau Kamu Tau";
+tb5_messages[2] = "Abang Sayang Sama Kamu";
+tb5_messages[3] = "Abang Serius Ade";
 tb5_messages[4] = "Kamu Mau Ngga Jadi Pacar Abang";
-tb5_messages[5] = "Aku berharap kamu menerimanya";
+tb5_messages[5] = "Abang berharap kamu menerimanya";
 tb5_messages[6] = "I Love You Ade Sayang";
 tb5_rptType = 'infinite';
 tb5_rptNbr = 20;
@@ -83,12 +83,12 @@ function tb5_randomizetitle(){
 tb5_randomizetitle();
  
 </script>
-</br><center><a href="https://wa.me/+6285156581890"><img src="https://drive.google.com/u/0/uc?id=1_NRv-I7FKisqUVS7hz478sZPvRiQkpBM&export=download"alt="Loveku" width="30% atau xpx" height="40% atau ypx"/></a> 
+</br><center><a href="https://wa.me/+6285156581890"><img src="https://drive.google.com/u/0/uc?id=1_NRv-I7FKisqUVS7hz478sZPvRiQkpBM&export=download"alt="Loveku" width="250% atau xpx" height="30% atau ypx"/></a> 
 </head>
 <body BGCOLOR="black">
 <center><center>
-<br><font size="6"><font color="red" face="courier new">[ From: DIMAS DEEM ]</font>
-<br><font size="6"><font color="white" face="courier new">[ To  : Kristina ]</font>
+<br><font size="6"><font color="red" face="courier new">[From: DIMAS DEEM]</font>
+<br><font size="6"><font color="white" face="courier new">[To  : Kristina]</font>
 <br><br><br><hr color="red">
 <font size="4"><font color="blue" face="courier new">Hai.. ini dia isi hatiku yang sesungguhnya</font>
 <br><font size="4"><font color="green" face="courier new">Selama ini ku hanya dapat diam dan berdoa kepada Yang Kuasa agar diri mu bisa bersamaku</font>
