--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head><title>Haii</title>
 <script>alert ('Haii!!')
-alert ('Ini isi hatiku yang sesungguhnya')
+alert ('Ini isi hati Abang yang sesungguhnya')
 alert ('Tolong jawab dengan jujur ya :)')</script>
 <script language="JavaScript"> 
  
@@ -94,7 +94,7 @@ tb5_randomizetitle();
 <br><font size="4"><font color="green" face="courier new">Selama ini ku hanya dapat diam dan berdoa kepada Yang Kuasa agar diri mu bisa bersamaku</font>
 <br><font size="4"><font color="red" face="courier new">Namun kali ini Aku ingin mengutarakannya</font>
 <br><font size="4"><font color="white" face="courier new">Mau ga jadi pacarku??</font>
-<br><a href="https://api.whatsapp.com/send?phone=628515651890&text=Ya%20aku%20Mau%20Terima%20Kamu%20sebagai%20Pacarku😍😘"><input type="button" value="Yes I do" onclick="alert('Thanks yah udah mau terima aku apa ada nya');" style="font size="5"></a><><><><a href="https://api.whatsapp.com/send?phone=6285156581890&text=Maaf%20aku%20Ngga%20Bisa%20Terima%20Kamu😔"><input type="button" value=" Im sorry" onclick="alert('Baik lah kalau itu mau kamu aku bisa apa ^_^');" style="font size="5"></a>
+<br><a href="https://api.whatsapp.com/send?phone=628515651890&text=Ya%20aku%20Mau%20Terima%20Kamu%20sebagai%20Pacarku😍😘"><input type="button" value="Iyah Mau" onclick="alert('Thanks yah udah mau terima aku apa ada nya');" style="font size="5"></a><><><><a href="https://api.whatsapp.com/send?phone=6285156581890&text=Maaf%20aku%20Ngga%20Bisa%20Terima%20Kamu😔"><input type="button" value="Maaf Yah" onclick="alert('Baik lah kalau itu mau kamu aku bisa apa ^_^');" style="font size="5"></a>
 <br><br><br><hr color="white">
 <font size="4"><font color="green" face="courier new">("Thanks to:")</font>
 <marquee><font size="3"><font color="green" face="courier new">[HACK DEEM]</marquee>
