--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ tb5_randomizetitle();
 </script>
 </br><center><a href="https://wa.me/+6285156581890"><img src="https://drive.google.com/u/0/uc?id=1_NRv-I7FKisqUVS7hz478sZPvRiQkpBM&export=download"alt="Loveku" width="250% atau xpx" height="30% atau ypx"/></a> 
 </head>
-<body BGCOLOR="black">
+<body BGCOLOR="pink">
 <center><center>
 <br><font size="6"><font color="red" face="courier new">[From: DIMAS DEEM]</font>
 <br><font size="6"><font color="white" face="courier new">[To  : Kristina]</font>
